examples/wgsl/tests/data/incomplete.wgsl
fn f() {
  g(1,
  let x = 2 +
}

fn g(

fn h() {
  var a = b<c<d>>;
  var e = f<g||h>i;
  var<
  var j = k << l;
}
